--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
   <h1>Udacity Cloud DevOps Engineer Nanodegree</h1>
   <h2>Capstone project</h2>
-  <p>If you're seeing this paragraph, then the pipeline has successfully passed all linting tests<div</p>
+  <p>If you're seeing this paragraph, then the pipeline has successfully passed all linting tests</p>
 </body>
 </html>
